<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/menu_loan"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/loan"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_modify"
        android:icon="@drawable/baseline_create_24"
        android:title="@string/modify"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />
</menu>