<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context="com.openclassrooms.realestatemanager.controllers.activities.DetailsActivity">

        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="30dp"
            android:paddingEnd="10dp"
            android:paddingBottom="30dp"
            android:text="@string/media"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_photo_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media" />


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="30dp"
            android:paddingEnd="10dp"
            android:paddingBottom="30dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_photo_recycler_view" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="50dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text">

            <ImageView
                android:id="@+id/surface_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/baseline_zoom_out_map_24"
                android:contentDescription="@string/surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/surface"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/surface_icon"
                app:layout_constraintTop_toTopOf="@id/surface_icon" />

            <TextView
                android:id="@+id/surface_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/surface"
                app:layout_constraintTop_toBottomOf="@id/surface"
                tools:text="150 m²" />

            <ImageView
                android:id="@+id/rooms_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/baseline_house_24"
                android:contentDescription="@string/number_of_rooms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surface_value" />

            <TextView
                android:id="@+id/rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/number_of_rooms"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/rooms_icon"
                app:layout_constraintTop_toTopOf="@id/rooms_icon" />

            <TextView
                android:id="@+id/rooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/rooms"
                app:layout_constraintTop_toBottomOf="@id/rooms"
                tools:text="6" />

            <ImageView
                android:id="@+id/bathrooms_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/baseline_bathtub_24"
                android:contentDescription="@string/nb_of_bathrooms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bedrooms_value" />

            <TextView
                android:id="@+id/bathrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/number_of_bathrooms"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/bathrooms_icon"
                app:layout_constraintTop_toTopOf="@id/bathrooms_icon" />

            <TextView
                android:id="@+id/bathrooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/bathrooms"
                app:layout_constraintTop_toBottomOf="@id/bathrooms"
                tools:text="2" />

            <ImageView
                android:id="@+id/bedrooms_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/baseline_king_bed_24"
                android:contentDescription="@string/number_of_bedrooms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rooms_value" />

            <TextView
                android:id="@+id/bedrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/number_of_bedrooms"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/bedrooms_icon"
                app:layout_constraintTop_toTopOf="@id/bedrooms_icon" />

            <TextView
                android:id="@+id/bedrooms_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/bedrooms"
                app:layout_constraintTop_toBottomOf="@id/bedrooms"
                tools:text="3" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/baseline_my_location_24"
                android:contentDescription="@string/location"
                app:layout_constraintStart_toStartOf="@id/details_map"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:paddingStart="10dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/location_icon"
                app:layout_constraintTop_toTopOf="@id/location_icon" />

            <TextView
                android:id="@+id/location_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="10"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/details_map"
                app:layout_constraintStart_toStartOf="@id/location_icon"
                app:layout_constraintTop_toBottomOf="@id/location"
                tools:text="Line 1\nLine 2\nLine 3\nLine 4" />

            <ImageView
                android:id="@+id/details_map"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
